// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`knex/Seed should create knex seed 1`] = `
"exports.seed = async (knex) => {
  // Deletes ALL and insert entries.
  await knex('users').del()

  // https://github.com/tgriesser/knex/issues/54
  await knex('users').insert([
    {
      id: 25376,
      auth0Id: '2e00568e-58c4-44d2-a3b4-785f8c0a1b70',
      locale: 'ko',
      nickname: 'Madisen.Kling',
      status: 'Liberian Dollar',
      isAdmin: false,
      avatar:
        'https://s3.amazonaws.com/uifaces/faces/twitter/woodydotmx/128.jpg'
    },
    {
      id: 43042,
      auth0Id: '233ef44a-9e80-4cc1-b36d-533d06ca3785',
      locale: 'nl',
      nickname: 'Laisha.Wunsch',
      status: 'quantifying Credit Card Account',
      isAdmin: true,
      avatar: 'https://s3.amazonaws.com/uifaces/faces/twitter/klimmka/128.jpg'
    },
    {
      id: 95569,
      auth0Id: 'd1a5bf68-da4c-47a9-8025-5b7672dc5d67',
      locale: 'es_MX',
      nickname: 'Marcos98',
      status: 'Agent Steel',
      isAdmin: true,
      avatar:
        'https://s3.amazonaws.com/uifaces/faces/twitter/alxndrustinov/128.jpg'
    }
  ])

  /* mat After seed [start] */
  /* mat After seed [end] */
}

/* mat Custom exports [start] */
/* mat Custom exports [end] */
"
`;

exports[`knex/Seed should create knex seed for channel 1`] = `
"exports.seed = async (knex) => {
  // Deletes ALL and insert entries.
  await knex('channels').del()

  // https://github.com/tgriesser/knex/issues/54
  await knex('channels').insert([
    {id: 68264, name: 'administrator'},
    {id: 36069, name: 'solutions'},
    {id: 63669, name: 'incredible'}
  ])

  /* mat After seed [start] */
  /* mat After seed [end] */
}

/* mat Custom exports [start] */
/* mat Custom exports [end] */
"
`;

exports[`knex/Seed should create knex seed for comment 1`] = `
"exports.seed = async (knex) => {
  // Deletes ALL and insert entries.
  await knex('comments').del()

  // https://github.com/tgriesser/knex/issues/54
  await knex('comments').insert([
    {
      id: 57447,
      text:
        'Ut amet molestiae aliquam numquam ad ut et. Et ut perspiciatis fugiat expedita fuga hic odio. Ducimus cumque aut harum in perferendis veritatis tempora aut. Facilis officia sed. Eum excepturi officia ipsum sunt voluptatem eius. Rerum qui doloremque ex velit porro animi odio saepe sunt.',
      channelId: 68264,
      commentedById: 25376,
      attachmentId: '28d15c5a-a70c-48e4-9772-bc910f421907'
    },
    {
      id: 33984,
      text:
        'Id optio rem culpa minus. Nostrum aut et. Aliquam repellat est reprehenderit.',
      channelId: 36069,
      commentedById: 43042,
      attachmentId: 'abfbc020-04b2-4d70-a1ed-aa85e702e181'
    },
    {
      id: 46230,
      text:
        'Facilis cupiditate quo nemo hic. Rem nesciunt aliquid aut qui architecto saepe enim laborum. Quia dolor consequuntur et dolorem tenetur totam nisi asperiores.',
      channelId: 63669,
      commentedById: 95569,
      attachmentId: '62fc4caf-224d-4658-949e-b68307f974d2'
    }
  ])

  /* mat After seed [start] */
  /* mat After seed [end] */
}

/* mat Custom exports [start] */
/* mat Custom exports [end] */
"
`;

exports[`knex/Seed should create knex seed for junction table 1`] = `
"exports.seed = async (knex) => {
  // Deletes ALL and insert entries.
  await knex('articles_tags').del()

  // https://github.com/tgriesser/knex/issues/54
  await knex('articles_tags').insert([
    {id: 48239, articleId: 52697, tagId: 82337},
    {id: 52023, articleId: 14400, tagId: 43149},
    {id: 37083, articleId: 29655, tagId: 3838}
  ])

  /* mat After seed [start] */
  /* mat After seed [end] */
}

/* mat Custom exports [start] */
/* mat Custom exports [end] */
"
`;
